[gd_scene load_steps=5 format=3 uid="uid://ddsluc837b12v"]

[ext_resource type="Script" path="res://Player.gd" id="1_veg04"]
[ext_resource type="Texture2D" uid="uid://kxp6nseb8n0j" path="res://icon.svg" id="2_hvqi6"]
[ext_resource type="AudioStream" uid="uid://d22wiltexswcu" path="res://hit.wav" id="3_36ffi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8jxx"]
size = Vector2(128, 128)

[node name="Player" type="Area2D"]
script = ExtResource("1_veg04")
AccelerationDivider = 5
Friction = 1.2

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_hvqi6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.3, 0.3)
shape = SubResource("RectangleShape2D_d8jxx")

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_36ffi")
volume_db = -10.0

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_end"]
